fix(schema): preserve declaration order via LinkedHashMap in Schema constructor (omnist-j#5)